--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <title>Bem-vindo!</title>
-</head>
-<body>
-    <h1>Bem-vindo ao meu site!</h1>
-    <p>Espero que você tenha uma ótima experiência por aqui.</p>
-</body>
-</html>
+voce e um troxa
